--- a/assets/css.css
+++ b/assets/css.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Fjalla+One);
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap');
 
 :root{
     /* Color scheema */
@@ -10,7 +11,9 @@
   }
   
   body{
-    font-family: "Fjalla One", sans-serif !important;
+    /* font-family: "Fjalla One", sans-serif !important; */
+    font-family: "Bitcount Grid Double", system-ui;
+
     padding:0;
     margin:0;
     /* //background:linear-gradient(to bottom, #405166 0%,#656f6f 100%) no-repeat; */
@@ -37,7 +40,7 @@
   
   main{
     /* background-color:blue; */
-    padding-top:300px;
+    padding-top:200px;
 
   }
   section{
@@ -97,19 +100,19 @@
 /* Header */
 header{
   position: fixed;
+  z-index:1000;
   width: 100%;
   top:100px;
   left: 0;
 }
 .header-container{
-  margin-top:10px;
+  margin:0 0.75rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top:1em;
   background-color: rgba(56, 56, 56,0.4);
   border-radius:10px;
-  background-blend-mode: blur(1px);
   backdrop-filter: blur(10px); 
+  border:2px solid rgba(255, 255, 255, 0.05);
 }
 .header-topside{
   position: relative;
@@ -145,6 +148,11 @@ html[dir="rtl"] .header-socials .socialIcon:first-child{
 html[dir="rtl"] .profileImg img{
   margin-left:10px;
 }
+.navbar-brand{
+  font-size: 30px;
+  font-style: italic;
+  color: white !important;
+}
 .navigation ul{
   display:flex;
   padding:0;
@@ -162,13 +170,13 @@ html[dir="rtl"] .profileImg img{
   height: 100%;
 }
 .navigation ul li a:hover{
-  border-bottom: 1px solid var(--vanila-color);
+  /* border-bottom: 1px solid var(--vanila-color); */
   padding: 0;
   margin:0;
 }
 .navigation ul li a.active{
   color:var(--vanila-color);
-  border-bottom: 2px solid var(--vanila-color);
+  /* border-bottom: 2px solid var(--vanila-color); */
 }
 .action-button{}
 .action-menu{
@@ -251,9 +259,10 @@ html[dir="rtl"] .profileImg img{
   font-size: 18px;
 }
 .github-profile{
-  background-image:url("./images/github-profile.jpg");
+  background-image: url(./images/github-profile.jpg);
   background-size: cover;
-  background-blend-mode: overlay;
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: color;
   height: 150px;
   border-radius: 5px;
   display: flex;
@@ -284,7 +293,7 @@ html[dir="rtl"] .profileImg img{
   margin-bottom:5px;
 }
 .quran{
-  background-image:url("./images/github-profile.jpg");
+  background-image:url("./images/َQuran.jpg");
   background-size: cover;
   background-blend-mode: overlay;
   height: 150px;
@@ -357,12 +366,12 @@ html[dir="rtl"] .profileImg img{
 }
 .title:nth-child(2) {
   color: var(--red-color);
+  font-size:50px;
 }
 .title:nth-child(3) {
   color: #f1c83c;
 }
-
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   .title_container{
     display: block;
     max-width: 500px;
@@ -370,11 +379,47 @@ html[dir="rtl"] .profileImg img{
   .title {
     font-size:50px;
   }
+  .title:nth-child(2) {
+    color: var(--red-color);
+    font-size:30px;
+  }
 }
 
 
+@media screen and (max-width: 600px) {
+  .title {
+    font-size:40px;
+  }
+  .title:nth-child(2) {
+    font-size:24px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .title {
+    font-size:33px;
+  }
+  .title:nth-child(2) {
+    color: var(--red-color);
+    font-size:22px;
+  }
+}
+
+.introduction-text p{
+  color:white;
+  font-weight: 300;
+}
+.introduction-text a{
+  font-weight: 400;
+}
+
+
+/* extras */
+
 .stars {
   position: absolute;
+  z-index: -1;
+  pointer-events: none;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -447,4 +492,56 @@ html[dir="rtl"] .profileImg img{
       opacity: 0;
       transform: translateX(100%) rotate(-45deg) scaleX(1);
   }
+}
+
+/* Footer */
+
+footer{
+  padding:120px 0;
+  overflow: hidden;
+}
+footer::after{
+  background-image: url('images/landscape.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y:40%;
+  content:'';
+  position:absolute;
+  width: 100%;
+  height: 350px;
+  left: 0;
+  bottom:0;
+  z-index: -1;
+}
+
+.copyright{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-self: center;
+}
+
+.va-footer-links-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-self: center;
+}
+.va-footer-link-item {
+  border-right: 1px solid black; 
+  max-width:300px;
+}
+html[lang="ar"] .va-footer-link-item {
+  border-right: none;
+  border-left: 1px solid black; 
+}
+.va-footer-link-item:last-child {
+  border: none; 
+}
+.va-footer-link {
+  font-size:18px;
+  margin:5px;
+  padding: 10px;
+  text-decoration: none;
+  color: inherit; 
 }
