--- a/assets/css.css
+++ b/assets/css.css
@@ -149,12 +149,13 @@ html[dir="rtl"] .profileImg img{
   margin-left:10px;
 }
 .navbar-brand{
-  font-size: 30px;
+  font-size: 40px;
   font-style: italic;
   color: white !important;
 }
 .navigation ul{
   display:flex;
+  align-items: center;
   padding:0;
   margin:0;
 }
@@ -168,14 +169,17 @@ html[dir="rtl"] .profileImg img{
 .navigation ul li a{
   transition: all 0.1s ease;
   height: 100%;
+  font-weight: 300;
 }
 .navigation ul li a:hover{
   /* border-bottom: 1px solid var(--vanila-color); */
   padding: 0;
   margin:0;
+  font-weight: 400;
 }
 .navigation ul li a.active{
   color:var(--vanila-color);
+  font-weight: 400;
   /* border-bottom: 2px solid var(--vanila-color); */
 }
 .action-button{}
@@ -239,7 +243,64 @@ html[dir="rtl"] .profileImg img{
     opacity: 0.2;
   }
 }
-
+.search{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.search-modal {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex; justify-content: center; align-items: center;
+  z-index: 9999;
+}
+.search-box {
+  padding: 20px;
+  border-radius: 12px;
+  width: 90%;
+  max-width: 500px;
+  position: relative;
+}
+.search-box input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 10px;
+}
+.search-button{
+  border:0;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+  color: white;
+  padding:10px;
+}
+#closeSearch {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: transparent;
+  border: none;
+  font-size: 15px;
+  color: var(--red-color);
+}
+@media screen and (max-width: 992px){
+  .navigation ul{
+    align-items: start;
+  }
+  .navigation ul li{
+    padding:10px 0px;
+    width: 100%;
+  }
+  .navigation ul li a{
+    display: block;
+  }
+  .search-button{
+    width: 100%;
+  }
+}
 
 /* Overview */
 .flex-center{
