--- a/assets/css.css
+++ b/assets/css.css
@@ -20,8 +20,9 @@
     padding:0;
     margin:0;
     /* //background:linear-gradient(to bottom, #405166 0%,#656f6f 100%) no-repeat; */
-    background: linear-gradient(to bottom, #000033, #1a1a1a); /* Galaxy-like background gradient */
-
+    background-image:  linear-gradient(to bottom, #000033, #1a1a1a); /* Galaxy-like background gradient */
+    background-repeat: no-repeat;
+    background-size: cover;
     background-size: 100%;
     min-height: 100vh;
     color:var(--vanila-color);
