--- a/assets/css.css
+++ b/assets/css.css
@@ -12,7 +12,7 @@
     --staleblue-color:#313759;
     --darkblue-color: #0D1440;
     --darkestblue-colo:#090C40;
-    --accent-color:#7584d6;
+    --accent-color: 233, 223, 10 ;
   }
   
   body{
@@ -47,7 +47,7 @@
   
   main{
     /* background-color:blue; */
-    padding-top:200px;
+    padding-top:160px;
 
   }
   section{
@@ -109,7 +109,7 @@ header{
   position: fixed;
   z-index:1000;
   width: 100%;
-  top:100px;
+  top:50px;
   left: 0;
 }
 .header-container{
@@ -177,20 +177,20 @@ html[dir="rtl"] .profileImg img{
 .navigation ul li a{
   transition: all 0.1s ease;
   height: 100%;
-  font-weight: 300;
+  font-weight: 400;
 }
 .navigation ul li a:hover{
   /* border-bottom: 1px solid var(--vanila-color); */
   padding: 0;
   margin:0;
   font-weight: 400;
+  color: rgb(var(--accent-color));
 }
 .navigation ul li a.active{
-  color:var(--vanila-color);
-  font-weight: 400;
+  color: rgb(var(--accent-color));
+  font-weight: 800;
   /* border-bottom: 2px solid var(--vanila-color); */
 }
-.action-button{}
 .action-menu{
   position: absolute;
   background-color:#5c5c5c;
@@ -217,6 +217,55 @@ html[dir="rtl"] .profileImg img{
 }
 .action-menu ul li:hover{
   background-color: #333;
+}
+
+.navbar-toggler{
+  border:0;
+  padding:0;
+  margin:0;
+}
+.nickname-7{
+  color: rgb(var(--accent-color));
+}
+/* From Uiverse.io by JulanDeAlb, keeping the owner name so you guys know :) */ 
+.hamburger {
+  cursor: pointer;
+  padding:5px;
+}
+
+.hamburger input {
+  display: none;
+}
+
+.hamburger svg {
+  /* The size of the SVG defines the overall size */
+  height: 1.5em;
+  /* Define the transition for transforming the SVG */
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  /* Define the transition for transforming the Stroke */
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+              stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.hamburger input:checked + svg {
+  transform: rotate(-45deg);
+}
+
+.hamburger input:checked + svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
 }
 
 
@@ -261,7 +310,7 @@ html[dir="rtl"] .profileImg img{
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex; justify-content: center; align-items: center;
   z-index: 9999;
 }
@@ -279,11 +328,11 @@ html[dir="rtl"] .profileImg img{
   border-radius: 10px;
 }
 .search-button{
-  border:0;
-  background-color: rgba(0, 0, 0, 0.4);
+  border: 1px solid #4a4a4a;
+  background-color: rgb(233 223 10 / 0%);
   border-radius: 5px;
   color: white;
-  padding:10px;
+  padding: 10px;
 }
 #closeSearch {
   position: absolute;
@@ -293,6 +342,11 @@ html[dir="rtl"] .profileImg img{
   border: none;
   font-size: 15px;
   color: var(--red-color);
+}
+kbd{
+  background-color: rgb(var(--accent-color));
+  color: #222;
+  margin: 0 10px;
 }
 @media screen and (max-width: 992px){
   .navigation ul{
@@ -329,10 +383,11 @@ html[dir="rtl"] .profileImg img{
 }
 .hero-title p{
   font-size: 34px;
+  font-weight: 200;
 }
 .hero-name{
-font-style: italic;
-font-size: 45px;
+  font-size: 45px;
+  font-weight: 200;
 }
 .changebox{
   float: left;
@@ -342,7 +397,7 @@ font-size: 45px;
 }
 .changebox span{
   display: inline-block;
-  color: var(--accent-color);
+  color: rgb(var(--accent-color));
   position: relative;
   white-space: nowrap;
   font-size: 34px;
@@ -366,20 +421,18 @@ font-size: 45px;
   font-size: 18px;
 }
 .github-profile{
-  background-image: url(./images/github-profile.jpg);
-  background-size: cover;
+  background-image: url(images/github-profile1.png);
+  background-size: 80%;
+  background-position: 110px 37%;
   background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: color;
   height: 150px;
   border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .github-profile-text{
-  color:lightgray;
+  opacity: 0.9;
   width: 100%;
-  padding: 15px;
+  padding: 30px 15px;
   h4{
     color:inherit;
   }
@@ -507,25 +560,35 @@ font-size: 45px;
 }
 #featuredPost{
   height: 100%;
+  width: 100%;
 }
 .blog-mini{
   background-color: rgb(9, 9, 9);
   border-radius: 5px;
   height: 100%;
-  flex-direction: column;
-  padding:15px;
   gap:5px;
   border:1px solid rgba(255, 255, 255, 0.2);
 }
-.blogs-brief h3 span{
-  opacity: 0.8;
-  font-size: 16px;
+.blogs-brief{
+  padding:30px 15px;
+  width: 100%;
+  opacity: 0.9;
+}
+.blogs-brief h4{
   font-weight: 200;
+  margin: 0;
+}
+.blogs-brief h4 span{
+  opacity: 0.8;
+  font-weight: 200;
+}
+.blogs-brief hr{
+  margin: 0 0 10px 0;
 }
 .blogs-brief p{
   opacity: 0.8;
-  font-size: 22px;
-  font-weight: 300;
+  font-size: 18px;
+  font-weight: 400;
   margin: 0;
 }
 
@@ -607,9 +670,13 @@ font-size: 45px;
   animation: 35s slides infinite linear;
 }
 .logos-reverse .logo_items{
+  display: inline-block;
   animation: 35s slides-reverse infinite linear;
 }
 
+.logos-reverse:hover .logo_items {
+  animation-play-state: paused;
+}
 .logos:hover .logo_items {
   animation-play-state: paused;
 }
@@ -617,14 +684,7 @@ font-size: 45px;
 .logo_items img{
   height: 25px;
 }
-.logo_items img:after{
-  content:'Hello world';
-  position:absolute;
-  left:0;
-  top:0;
-  z-index:100;
-  color:red;
-} 
+
 /* 
 .title {
   transform: translateX(-50%);
@@ -779,7 +839,9 @@ font-size: 45px;
 /* Footer */
 
 footer{
-  padding:120px 0;
+  border-top:1px solid rgba(255, 255, 255, 0.2);
+  padding:50px 0;
+  margin-top: 50px;
   overflow: hidden;
 }
 /* footer::after{
@@ -922,3 +984,38 @@ html[lang="ar"] .va-footer-link-item {
 } */
 
 
+/* About Section */
+
+
+.about-abstract,.experience,.education{
+  /* background-color: black;
+  border-radius: 5px; */
+  padding: 0 0.75em;
+}
+.about-abstract p{
+  font-size: 18px;
+}
+.tool-lebal {
+  background-color: black;
+  border:1px solid blue;
+  border-radius:5px;
+  padding:2px;
+}
+.tool-lebal:hover {
+  border-color:white;
+}
+
+.sticky-title{
+  position: sticky;
+  top: 200px;
+}
+.experience{
+  position: relative;
+}
+.experience ul{
+  list-style: none;
+}
+.experience h4{
+  font-weight: 200;
+
+}
